<resources>
    <string name="app_name">Чек-лист</string>
    <string name="yes_bnt">Да</string>
    <string name="no_btn">Нет</string>
    <string name="setts">Настройки</string>
    <string name="about">О приложении</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Авторизоваться</string>
    <string name="create_account">Регистрация</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Выйти из профиля</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Загрузка…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Вход не выполнен</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Почтовый адрес</string>
    <string name="hint_password">Пароль</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Ошибка авторизации</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Комбинация логина/пароля не распознана</string>
    <string name="status_verification_succeeded">Удачное подключение</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_title_text">"ЧЕКЛИСТ"</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="passwordless_status_fmt">Аккаунт: %s</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>


    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="get_name">Ваше имя:</string>
    <string name="get_family">Ваша фамилия:</string>
    <string name="get_middle">Ваше отчество:</string>
    <string name="new_acc">Регистрация нового пользователя</string>
</resources>
